minishift/templates/activemq/deploymentconfig-activemq.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: EriksFetaTemplate
  creationTimestamp: null
  generation: 1
  labels:
    app: activemq
    environment: test
  name: activemq
spec:
  replicas: 1
  selector:
    app: activemq
    deploymentconfig: activemq
  template:
    metadata:
      annotations:
        openshift.io/generated-by: EriksFetaTemplate
      labels:
        app: activemq
        deploymentconfig: activemq
        environment: test
    spec:
      containers:
      - env:
        - name: ACTIVEMQ_USERNAME
          value: admin
        - name: ACTIVEMQ_PASSWORD
          value: admin
        image: rmohr/activemq@sha256:dba6922c7931c9f9505092c8f19fe901638294540c4a14594c17fde2c5562227
        imagePullPolicy: IfNotPresent
        name: activemq
        ports:
        - containerPort: 1883
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        - containerPort: 8161
          protocol: TCP
        - containerPort: 61613
          protocol: TCP
        - containerPort: 61614
          protocol: TCP
        - containerPort: 61616
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
