minishift/templates/activemq/service-activemq.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: activemq
    environment: test
  name: activemq
spec:
  ports:
  - name: 1883-tcp
    port: 1883
    protocol: TCP
    targetPort: 1883
  - name: 5672-tcp
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: 8161-tcp
    port: 8161
    protocol: TCP
    targetPort: 8161
  - name: 61613-tcp
    port: 61613
    protocol: TCP
    targetPort: 61613
  - name: 61614-tcp
    port: 61614
    protocol: TCP
    targetPort: 61614
  - name: 61616-tcp
    port: 61616
    protocol: TCP
    targetPort: 61616
  selector:
    deploymentconfig: activemq
  sessionAffinity: None
  type: ClusterIP
